add datacube tutorials

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 !environment.yml
 !store_its_live_velocities_2022.json
 !ITS_LIVE API_tutorial.ipynb
+!its_live_datacube_term_poly_tutorial.ipynb
+!its_live_datacube_tutorial.ipynb
